style.css
html {
  scroll-behavior: smooth;
}

@font-face {
  font-family: "Caveat";
  src: url("./fonts/Caveat-VariableFont_wght.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Roboto";
  src: url("./fonts/Roboto-Italic-VariableFont_wdth,wght.ttf")
    format("truetype");
  font-weight: normal;
  font-style: normal;
}

.placeholder {
  height: 100vh;
}
q * {
  margin: 0;
  padding: 0;
}

body {
  background-color: #1a1a1a;
  font-family: "Roboto", sans-serif;
  color: var(--heading-color);

  --primary-color: #f83029;
  --heading-color: rgb(255, 255, 255);
  --text-color: rgb(212, 211, 211);
}

.navbar {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 5rem;
  gap: 1rem;
  font-size: 0.8rem;
  text-align: center;
}

.navbar a {
  text-decoration: none;
  color: var(--heading-color);
  font-family: "Roboto", sans-serif;
  text-transform: uppercase;
  letter-spacing: 0.1rem;
}

.navbar a:hover {
  color: var(--primary-color);
  transition: color 0.3s ease-in-out;
}

.hero {
  background:
    linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(./img/hero.jpg);
  background-size: cover;
  background-position: center;
  height: calc(100vh - 5rem);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.title {
  font-family: "Caveat", cursive;
  font-size: 3rem;
  line-height: 3rem;
  margin: 0;
}

.subtitle {
  font-family: "Roboto", sans-serif;
  line-height: 1.5rem;
  color: var(--text-color);
  margin: 1rem 0;
}

.btn {
  display: inline-block;
  padding: 1rem 2rem;
  background-color: var(--primary-color);
  text-decoration: none;
  border-radius: 5px;
  margin-top: 2rem;
  border: 1px solid var(--primary-color);
  color: white;
}

.btn-invert {
  background-color: transparent;
  color: var(--primary-color);
  width: fit-content;
  padding: 1rem 2rem;
  border: 1px solid var(--primary-color);
  border-radius: 5px;
  text-decoration: none;
  transition: all 0.2s ease-in-out;
}

.btn-invert:hover {
  background-color: var(--primary-color);
  color: white;
  border: 1px solid var(--primary-color);
  transition: all 0.3s ease-in-out;
}

.btn-call {
  background-color: var(--primary-color);
  color: var(--text-color);
  width: fit-content;
  padding: 1rem 2rem;
  border: 1px solid var(--primary-color);
  border-radius: 5px;
  text-decoration: none;
  transition: all 0.2s ease-in-out;
}

.btn-call:hover {
  background-color: transparent;
  color: var(--primary-color);
  border: 1px solid var(--primary-color);
  transition: all 0.3s ease-in-out;
}

.btn:hover {
  background-color: transparent;
  color: var(--primary-color);
  border: 1px solid var(--primary-color);
  transition: all 0.3s ease-in-out;
}

.about {
  padding: 4rem 2rem;
}

.about-content {
  display: flex;
  flex-direction: column;
  align-items: left;
}
.heading {
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-decoration-color: var(--primary-color);
  text-underline-offset: 0.5rem;
  font-size: 2rem;
  line-height: 2rem;
  letter-spacing: 0, 2rem;
  margin-bottom: 1rem;
}

.about-text {
  color: var(--text-color);
  line-height: 1.2rem;
  margin-bottom: 2rem;
}

.btn-card {
  padding: 1rem 2rem;
  width: fit-content;
  background-color: var(--primary-color);
  text-decoration: none;
  border-radius: 5px;
  border: 1px solid var(--primary-color);
  color: white;
  margin: 0 0 2rem;
}

.btn-card:hover {
  background-color: transparent;
  color: var(--primary-color);
  border: 1px solid var(--primary-color);
  transition: all 0.3s ease-in-out;
}

.about-images {
  display: flex;
  width: 100%;
  gap: 0.5rem;
}

.about-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.about-image-large {
  min-width: 50%;
}

.about-images-small {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.info {
  padding: 4rem 2rem;
  background:
    linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(./img/info.jpg);
  background-size: cover;
  background-position: center;
  display: flex;
  justify-content: center;
  align-items: center;
}

.info-table {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.heading-info {
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-decoration-color: var(--primary-color);
  text-underline-offset: 0.5rem;
  font-size: 2rem;
  line-height: 2rem;
  letter-spacing: 0, 2rem;
  width: fit-content;
}

.entry-plan {
  display: flex;
  flex-direction: column;

  gap: 1rem;
}

.entry-days {
  display: flex;
  justify-content: space-between;
}

.days {
  color: var(--text-color);
}

.time {
  color: white;
}

.contact {
  display: flex;
  flex-direction: column;
  max-width: 85%;
  padding: 4rem 2rem;
  margin: 0 auto;
}

.contact-content {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.contact-img {
  width: 100%;
}

.contact-details {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.contact-detail {
  margin-top: 0.5rem;
  color: var(--text-color);
  font-size: 1rem;
}

.contact-action {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  margin-top: 1rem;
}

.footer {
  background-color: #2b2b2b;
  padding: 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}

.footer-links {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5rem;
}

.footer-item {
  color: white;
  text-decoration: none;
  font-size: 1rem;
}

.footer-item:hover {
  color: var(--primary-color);
  transition:
    color 0,
    3s ease-in-out;
}

.footer-copyright {
  color: white;
  font-size: 0.8rem;
}

@media only screen and (min-width: 600px) {
  .navbar {
    gap: 2rem;
    font-size: 1.5rem;
  }

  .title {
    font-size: 5rem;
    line-height: 5rem;
  }

  .subtitle {
    font-size: 1.5rem;
    line-height: 1.5rem;
  }

  .btn {
    padding: 1.25rem 2.5rem;
    font-size: 1.2rem;
  }

  .about-text {
    font-size: 1.2rem;
    line-height: 1.4rem;
  }

  .contact-content {
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
  }

  .contact-img {
    width: 60%;
  }

  .footer-links {
    flex-direction: row;
    gap: 2rem;
  }

  .footer-item {
    font-size: 1.2rem;
  }

  .footer-copyright {
    font-size: 1rem;
  }
}

@media only screen and (min-width: 1000px) {
  .navbar {
    gap: 3rem;
  }

  .title {
    font-size: 6rem;
    line-height: 6rem;
  }

  .subtitle {
    font-size: 2rem;
    line-height: 2rem;
  }

  .btn {
    padding: 1.5rem 3rem;
    font-size: 1.5rem;
  }

  .about {
    display: grid;
    gap: 2rem;
    grid-template-columns: 1fr 1fr;
    align-items: center;
    margin: 0 4rem;
  }

  .about-text {
    font-size: 1.4rem;
    line-height: 1.6rem;
    max-width: 500px;
  }

  .about-images {
    gap: 1rem;
  }

  .about-images-small {
    gap: 1rem;
  }

  .heading {
    font-size: 3rem;
    line-height: 3rem;
  }

  .btn-card {
    font-size: 1.4rem;
    padding: 1.25rem 2.5rem;
  }

  .entry-plan {
    font-size: 1.2rem;
  }

  .contact-img {
    width: 50%;
  }
  .contact-content {
    flex-direction: row;
    align-items: center;
    gap: 2rem;
    justify-content: center;
  }

  .contact-action {
    flex-direction: row;
    gap: 1rem;
  }

  .contact-detail {
    font-size: 1.2rem;
    margin-top: 1rem;
  }

  .heading-info {
    font-size: 2rem;
    line-height: 2rem;
  }
}

